# EventTrace

./: .agent.md  .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  DOMAIN_SETUP.md  Dockerfile  Dockerfile.api  Dockerfile.scraper  Makefile  README.md  TODO_MSG91_DLT.md  VC_LINK_VERIFICATION.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  gcloud-setup.sh  pyproject.toml  railway.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_create_all_tables.py  0002_add_refresh_tokens.py  0003_add_user_profile_fields.py  0007_notification_system.py  0008_unique_email.py  0009_ecourts_case_type_map.py  0010_causelist_bench_at_time_key.py  0011_causelist_bench_bench_label_key.py  0012_causelist_case_section_key.py  0013_canonical_court_judge_advocate.py  0014_operational_rule.py  0015_phase1a_schema.py  0016_source_court.py  0017_recreate_case_history_cache.py  05ad37e58a90_add_causelist_parsing_fields.py  4558de5b9871_sync_schema_fix.py  5ff818b70039_merge_branches.py  6b8b2d2fd5c1_add_user_whatsapp_number.py  a1b2c3d4e5f6_add_source_court.py  db20cf7f17b7_merge_case_history_and_source_court.py  ec9ae990e181_initial_schema.py
docs/: 01_2026-04-23_session_notes.md  14_PRODUCT_SPEC.md  16_PRODUCT_STATUS.md  17_VPS_DEPLOYMENT.md  19_BILLING_AND_BENCH_HEADER_ANALYSIS.md  20_MASTER_STATUS.md  21_COMPLETE_SYSTEM_ARCHITECTURE.md  ARCHITECTURE.md  NOTIFICATION_DESIGN.md  NOTIFICATION_SYSTEM.md  PRODUCT_STATUS.md  PROJECT_PLAN.md  README.md  STITCH_PROMPT_V2.md  WHATSAPP_SETUP.md
docs/archive/: 03_2026-04-23_research.md  06_2026-04-30_system_architecture_proposal.md  07_2026-04-30_causelist_parser_design.md  08_2026-04-30_migration_research.md  10_2026-04-30_postgres_migration_session.md  15_PRESENTATION.docx  22_SESSION_2026-05-07.md  INDEX.md  REFACTOR_SESSION.md
docs/deploy/: gcp-deployment-plan.md
docs/phase1/: 13_SECURITY.md  15_PRESENTATION.md  INDEX.md  SRS_BUSINESS.md  STITCH_PROMPT_V2.md  TECH_SPEC.md
docs/phase2/: INDEX.md
scripts/: create_trigger.sh  md_to_docx.py  migrate_sqlite_to_postgres.py  start-api.sh  start-monitor.sh  start-scheduler.sh  supabase_setup.sql  trigger_config.yaml
src/eventtrace/: api.py  backfill.py  case_history_refresh.py  causelist_parser.py  causelist_scheduler.py  causelist_scraper.py  change_detector.py  cmc_simple.py  config.py  db.py  init_session.py  normalize.py  run_monitor.py  scraper.py  telegram_bot.py  ui.html  whatsapp_bot.py
src/eventtrace/bots/: __init__.py  telegram_bot.py  whatsapp_bot.py
src/eventtrace/causelist/: __init__.py  backfill.py  causelist_parser.py  causelist_scheduler.py  causelist_scraper.py  registry.py
src/eventtrace/common/: __init__.py  normalize.py  time.py
src/eventtrace/core/: config.py  court_source.py  health.py  logging_setup.py  metrics.py  redis_client.py
src/eventtrace/domain/: __init__.py  models.py
src/eventtrace/monitor/: __init__.py  change_detector.py  run_monitor.py
src/eventtrace/routes/: __init__.py  admin.py  alerts.py  auth.py  case_search.py  causelist.py  display.py  ecourts_test.py  export.py  health.py  history.py  matters.py  my_cases.py  notifications.py  ui.py  utils.py  webhooks.py
src/eventtrace/schemas/: __init__.py  alerts.py  auth.py
src/eventtrace/scraping/: __init__.py  init_session.py  scraper.py
src/eventtrace/services/: __init__.py  admin_alerts.py  alert_checker.py  auth.py  case_diff.py  csv_export.py  deps.py  dlq_worker.py  ecourts.py  notif_dedup.py  notification_dispatch.py  notification_retry_worker.py  notifications.py  reconciliation.py  resolve_ecourts_type.py  scraper_guard.py  twilio.py  (+3 more)
tests/: test_api_routes.py  test_auth_service.py  test_causelist_parser_headings.py  test_change_detector.py  test_my_cases.py  test_phase1a_foundation.py  test_phase1b_data_pipeline.py  test_phase1c_notifications.py  test_run_monitor.py  test_schemas.py  test_smoke.py
(+22 files in other folders)
